# gumba

./: README.md  TODO  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/gumba/: MainActivity.kt
bookdigitalizer/: bookdigitalizer.py  model.py  promts.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: data_controller.dart  display_controller.dart  logger.dart  main.dart  style.dart  widget_text.dart
lib/classes/: mushroom.dart  mushroom.g.dart  symbols.dart  symbols.g.dart  test_mushrooms.dart
lib/util/: ocr.dart
lib/widgets/: action_bar.dart  appbar.dart  gumba_card.dart  gumba_list.dart  home_page.dart  saved_gumbas_tab.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
python/: digitalize_page.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
