[project]
name = "bookdigitalizer"
version = "0.1.0"
description = "This is a helper package to digitalize books about mushrooms"
authors = [
    {name = "Soós Gábor",email = "soosgabor0212@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "layoutparser (>=0.3.4,<0.4.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "ollama (>=0.6.2,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

